# SOLMUSICnfts

./: .env.example  .gitignore  README.md  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
anchor/: Anchor.toml
anchor/programs/mywalletapp/: Cargo.toml
anchor/programs/mywalletapp/src/: lib.rs
anchor/src/: index.ts  mywalletapp-exports.ts
anchor/tests/: mywalletapp.spec.ts
public/: test-blink.html
src/app/: globals.css  layout.tsx  music-visualizer.tsx  page.tsx
src/app/actions.json/: route.ts
src/app/blink-view/: page.tsx
src/app/music-nft/collection/: page.tsx
src/app/music-nft/create/: page.tsx
src/app/mywalletapp/: page.tsx
src/app/profile/: page.tsx
src/components/: Analytics.tsx
src/components/dialect/: DialectBlinks.tsx  DialectWrapper.tsx
src/components/music-nft/: MusicNftCard.tsx  NftDetailsClient.tsx
src/components/mywalletapp/: mywalletapp-data-access.tsx  mywalletapp-feature.tsx  mywalletapp-ui.tsx
src/components/profile/: ClearCacheButton.tsx  PinataSyncButton.tsx
src/components/theme/: ThemeProvider.tsx
src/components/ui/: Footer.tsx  Header.tsx  button.tsx  input.tsx  ui-layout.tsx
src/components/user/: UsernameModal.tsx  WalletProfileAdapter.tsx
src/components/wallet/: AppWalletProvider.tsx
src/config/: env.ts
src/contexts/: WalletContextProvider.tsx
src/lib/: clear-cache.ts  nft-utils.ts  transaction-utils.ts  user-profile-manager.ts
src/pages/: _document.tsx
src/services/: pinata.ts  server-utils.ts  solana.ts  user-profile.ts
(+5 files in other folders)
